packages/@lwc/ssr-compiler/src/__tests__/fixtures/wire/errors/throws-when-adapter-is-nested-member-expression/modules/x/wire/wire.js
import { wire, LightningElement } from 'lwc';
import { adapters } from 'x/adapter';
export default class Test extends LightningElement {
    @wire(adapters.getters.getFoo)
    wiredFoo;
}
